# cantera_network

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  benchmark.md  benchmark_v2.md  pyproject.toml
benchmarks/: BENCHMARKS.md  README.md  USAGE_IN_REPO.md
configs/: default.yaml  defaults.yaml
docs/: 00_INVARIANTS.md  01_ARCHITECTURE.md  02_ARTIFACT_CONTRACTS.md  03_CONFIG_CONVENTIONS.md  03_TEMPORAL_NETWORK_SPEC.md  04_CONFIG_SIMPLIFICATION.md  04_PIPELINES.md  05_VISUALIZATION_STANDARDS.md  06_TESTING_AND_QA.md  07_CONTRIBUTING.md  08_REPO_MAP.md  09_REFACTOR_PLAN.md  README.md
requirements/: benchmarks.txt  dev.txt  ml_optional.txt
rxn_platform/: __init__.py
tests/: conftest.py  test_active_subspace_dummy.py  test_artifact_store_roundtrip.py  test_artifacts_cli.py  test_assim_eki_dummy.py  test_assim_esmda_dummy.py  test_assim_laplacian_regularizer_dummy.py  test_assim_param_misfit.py  test_benchmark_report_smoke.py  test_cantera_backend_optional.py  test_cantera_outputs_optional.py  test_cli_dataset_registry.py  test_cli_doctor_runstore_root.py  test_cli_help.py  test_cli_list_runs.py  test_cli_pipeline_run.py  test_doctor_failure_category.py  test_dummy_backend_runartifact.py  test_error_messages.py  test_eval_mapping_recipe_smoke.py  test_features_network_metrics.py  test_features_reduction_cheap_metrics_dummy.py  test_features_rop_optional.py  test_features_superstate_merge_quality_dedup_dummy.py  test_features_superstate_qoi_dummy.py  test_features_timeseries.py  test_gnn_dataset_export_dummy.py  test_golden_suite_dummy.py  test_graph_analytics_smoke.py  test_graph_bipartite_smoke.py  test_graph_laplacian.py  test_graph_stoich_dummy.py  test_hydra_compose_smoke.py  test_import_smoke.py  test_manifest_roundtrip.py  (+49 more)
(+245 files in other folders)
