[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rxn-platform"
version = "0.0.0"
description = "rxn_platform scaffold"
requires-python = ">=3.9"
dependencies = ["hydra-core>=1.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
