[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rxn-platform"
version = "0.0.0"
description = "rxn_platform scaffold"
requires-python = ">=3.9"
dependencies = ["hydra-core>=1.3"]

[project.optional-dependencies]
clearml = [
  "clearml",
]
gnn = [
  "numpy>=1.20",
  "scipy>=1.7",
  "torch",
  "torch-geometric",
]
dev = [
  "black>=24.3",
  "mypy>=1.8",
  "pre-commit>=3.5",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100
extend-exclude = [
  "artifacts",
  "build",
  "dist",
  "external",
  "runs",
  ".venv",
  "src/rxn_platform/backends",
  "src/rxn_platform/tasks",
  "tests",
]

[tool.ruff.lint]
select = ["F"]
ignore = ["F401", "F841"]

[tool.black]
line-length = 100
target-version = ["py39"]
extend-exclude = '''
/(
  artifacts
  | build
  | dist
  | external
  | runs
  | \.venv
  | src/rxn_platform/backends
  | src/rxn_platform/tasks
  | tests
)/
'''

[tool.mypy]
python_version = "3.9"
files = [
  "src/rxn_platform/errors.py",
  "src/rxn_platform/registry.py",
  "src/rxn_platform/run_store.py",
  "src/rxn_platform/store.py",
]
ignore_missing_imports = true
show_error_codes = true
pretty = true
